# cmake_sample

./: ReadMe.md
cmake_ndk/: CMakeLists.txt  CMakePresets.json  ReadMe.md  build.sh  main.c
demo_01/: CMakeLists.txt  ReadMe.md
demo_02/: ReadMe.md
